[gd_scene load_steps=15 format=3 uid="uid://rwpfs10v6p2a"]

[ext_resource type="PackedScene" uid="uid://cngj2ughe8rfn" path="res://Scenes/Maps/Map_Base/3D/Free_Camera/Free_Camera.tscn" id="1_0fgjv"]
[ext_resource type="Script" uid="uid://cwi43e7jyitj7" path="res://Global_Scenes/Battle_System/Battle_SV/Encounters/Scripts/Encounter_Base.gd" id="1_nep7y"]
[ext_resource type="PackedScene" uid="uid://vhtor60ei5fs" path="res://Global_Scenes/Battle_System/Battle_SV/Encounters/Command_Circle/Command_Circle.tscn" id="3_8ip60"]
[ext_resource type="PackedScene" uid="uid://c67cxkpsuanog" path="res://Scenes/Maps/Map_Base/3D/Free_Audio/Free_Audio.tscn" id="3_p5kx0"]
[ext_resource type="Script" uid="uid://8hhclql5tf5n" path="res://Global_Scenes/Battle_System/Battle_SV/Encounters/Scripts/Place_Pos.gd" id="4_evj7w"]
[ext_resource type="PackedScene" uid="uid://0iwgi3bid3ay" path="res://Global_Scenes/Battle_System/Battle_SV/Encounters/Indicators/Indicators.tscn" id="6_3vyu0"]
[ext_resource type="PackedScene" uid="uid://rjec7v7j244o" path="res://Global_Scenes/Battle_System/Battle_SV/Encounters/Enemy_Select/Enemy_Select.tscn" id="6_tqicl"]
[ext_resource type="PackedScene" uid="uid://culespvwy38kj" path="res://Global_Scenes/Battle_System/Battle_SV/Encounters/Rating/Rating.tscn" id="6_x7hxv"]
[ext_resource type="PackedScene" uid="uid://cc15wpmb3jn3l" path="res://Global_Scenes/Battle_System/Battle_SV/Encounters/Specials_Menu/Specials_Menu.tscn" id="10_hdarf"]
[ext_resource type="PackedScene" uid="uid://bmljsmgx2wmsn" path="res://Scenes/Stats_Display/Stats_Display_Battle.tscn" id="11_cwhu6"]

[sub_resource type="NavigationMesh" id="NavigationMesh_p5kx0"]
geometry_source_geometry_mode = 2
geometry_source_group_name = &"NavMesh_Main"
cell_size = 0.2
cell_height = 0.2
agent_height = 1.8
agent_radius = 0.4
agent_max_climb = 0.2

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ldx6g"]

[sub_resource type="Sky" id="Sky_1fsf3"]
sky_material = SubResource("ProceduralSkyMaterial_ldx6g")

[sub_resource type="Environment" id="Environment_wu6vb"]
background_mode = 2
background_color = Color(1, 1, 1, 1)
sky = SubResource("Sky_1fsf3")
ambient_light_color = Color(0.5, 0.5, 0.5, 1)
ambient_light_sky_contribution = 0.3
reflected_light_source = 2
tonemap_mode = 3
tonemap_exposure = 0.6
tonemap_white = 1.4
glow_strength = 1.9
volumetric_fog_albedo = Color(0.4, 0.4, 0.4, 1)
volumetric_fog_emission = Color(0.2215, 0.25, 0.22, 1)
volumetric_fog_emission_energy = 0.5

[node name="Encounter_Base" type="Node3D"]
script = ExtResource("1_nep7y")

[node name="Terrain" type="Node3D" parent="."]

[node name="Below" type="Node3D" parent="Terrain"]

[node name="Same_As" type="Node3D" parent="Terrain"]

[node name="Areas" type="Node3D" parent="Terrain"]

[node name="Objects" type="Node3D" parent="."]

[node name="$Free_Camera" parent="Objects" instance=ExtResource("1_0fgjv")]

[node name="$Free_Audio" parent="Objects" instance=ExtResource("3_p5kx0")]

[node name="Party_Members" type="Node3D" parent="Objects"]

[node name="Place_Pos" type="Node3D" parent="Objects/Party_Members"]
script = ExtResource("4_evj7w")

[node name="1" type="Node3D" parent="Objects/Party_Members/Place_Pos"]

[node name="1" type="Marker3D" parent="Objects/Party_Members/Place_Pos/1"]

[node name="2" type="Node3D" parent="Objects/Party_Members/Place_Pos"]
visible = false

[node name="1" type="Marker3D" parent="Objects/Party_Members/Place_Pos/2"]

[node name="2" type="Marker3D" parent="Objects/Party_Members/Place_Pos/2"]

[node name="3" type="Node3D" parent="Objects/Party_Members/Place_Pos"]
visible = false

[node name="1" type="Marker3D" parent="Objects/Party_Members/Place_Pos/3"]

[node name="2" type="Marker3D" parent="Objects/Party_Members/Place_Pos/3"]

[node name="3" type="Marker3D" parent="Objects/Party_Members/Place_Pos/3"]

[node name="4" type="Node3D" parent="Objects/Party_Members/Place_Pos"]
visible = false

[node name="1" type="Marker3D" parent="Objects/Party_Members/Place_Pos/4"]

[node name="2" type="Marker3D" parent="Objects/Party_Members/Place_Pos/4"]

[node name="3" type="Marker3D" parent="Objects/Party_Members/Place_Pos/4"]

[node name="4" type="Marker3D" parent="Objects/Party_Members/Place_Pos/4"]

[node name="Instances" type="Node3D" parent="Objects/Party_Members"]

[node name="Enemies" type="Node3D" parent="Objects"]

[node name="Popups" type="Node3D" parent="Objects"]

[node name="Nav_Regions" type="Node3D" parent="."]

[node name="Main" type="NavigationRegion3D" parent="Nav_Regions"]
navigation_mesh = SubResource("NavigationMesh_p5kx0")

[node name="Flee_Pos" type="Marker3D" parent="."]

[node name="Command_Circle" parent="." instance=ExtResource("3_8ip60")]

[node name="Rating" parent="." instance=ExtResource("6_x7hxv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8, 0, 1.1)

[node name="Indicators" parent="." instance=ExtResource("6_3vyu0")]

[node name="Env" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wu6vb")

[node name="Enemy_Select" parent="." instance=ExtResource("6_tqicl")]

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Specials_Menu" parent="Canvas" instance=ExtResource("10_hdarf")]
metadata/_edit_lock_ = true

[node name="Stats_Display" parent="Canvas" instance=ExtResource("11_cwhu6")]
metadata/_edit_lock_ = true
